<?xml version="1.0" encoding="UTF-8"?>
<project>
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.3</version>
		<relativePath/>
	</parent>
	<groupId>com.b2x2</groupId>
	<artifactId>b2x2</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<properties>
		<java.version>23</java.version>
		<teavm.version>0.11.0</teavm.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.teavm</groupId>
			<artifactId>teavm-classlib</artifactId>
			<version>${teavm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.teavm</groupId>
			<artifactId>teavm-jso-apis</artifactId>
			<version>${teavm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.teavm</groupId>
			<artifactId>teavm-tooling</artifactId>
			<version>0.11.0</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>6.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.10.2</version>
		</dependency>
		<dependency>
			<groupId>org.openjdk.jol</groupId>
			<artifactId>jol-core</artifactId>
			<version>0.17</version>
		</dependency>
	</dependencies>
	<build>
		<defaultGoal>spring-boot:run</defaultGoal>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>23</source>
					<target>23</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.teavm</groupId>
				<artifactId>teavm-maven-plugin</artifactId>
				<version>${teavm.version}</version>
				<executions>
					<!--execution>
						<id>wasm-runtime</id>
						<goals>
							<goal>copy-webassembly-gc-runtime</goal>
						</goals>
						<configuration>
							<targetDirectory>${project.build.directory}/classes/static/wasm</targetDirectory>
						</configuration>
					</execution>
					<execution>
						<id>wasm-code</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<mainClass>com.b2x2.client.Client</mainClass>
							<targetDirectory>${project.build.directory}/classes/static/wasm</targetDirectory>
							<minifying>true</minifying>
							<debugInformationGenerated>false</debugInformationGenerated>
							<sourceMapsGenerated>false</sourceMapsGenerated>
							<sourceFilesCopied>false</sourceFilesCopied>
							<incremental>false</incremental>
							<optimizationLevel>FULL</optimizationLevel>
							<targetType>WEBASSEMBLY_GC</targetType>
						</configuration>
					</execution-->
					<execution>
						<id>web-client</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<targetDirectory>${project.build.directory}/classes/static/js</targetDirectory>
							<mainClass>com.b2x2.client.Client</mainClass>
							<minifying>false</minifying>
							<debugInformationGenerated>true</debugInformationGenerated>
							<sourceMapsGenerated>true</sourceMapsGenerated>
							<sourceFilesCopied>true</sourceFilesCopied>
							<optimizationLevel>ADVANCED</optimizationLevel>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
